--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div id="carousel">
+            <img src="img/01.webp" alt="black-spiderman">
+
+        </div>
+
+    </div>
 
     <script src="js/script.js"></script>
 </body>
