feat: displayed images as miniatures

--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Objects Carousel</title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+    integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div id="container">
         <div id="carousel">
-            <img src="img/01.webp" alt="black-spiderman">
-
+            <img id='carousel-img'>
+            <div id="img-caption">
+                <h2 id="img-title"></h2>
+                <p id="img-text"></p>
+            </div>
+            <div id="card-slider">
+                <i id='arrow-up' class="fa-solid fa-chevron-up"></i>
+                <i id='arrow-down' class="fa-solid fa-chevron-down"></i>
+            </div>
         </div>
 
     </div>
