feat: displayed card text

--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 <body>
     <div id="container">
         <div id="carousel">
-            <img id='carousel-img'>
-            <div id="img-caption">
-                <h2 id="img-title"></h2>
-                <p id="img-text"></p>
+            <div id="img-card">
+                <img id='carousel-img'>
+                <div id="img-caption">
+                    <h2 id="img-title"></h2>
+                    <p id="img-text"></p>
+                </div>
             </div>
             <div id="card-slider">
                 <i id='arrow-up' class="fa-solid fa-chevron-up"></i>
