feat: created autoplay + to be fixed

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
 
     </div>
 
+    <div id="buttons-container">
+        <button id="btn-start">Avvia</button>
+        <button>Reverse</button>
+    </div>
+
     <script src="js/script.js"></script>
 </body>
 </html>
